Implemented all the necessary commands to initialize a cloned repository correctly into "npm run init"

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "-",
   "main": "app.js",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "init": "npm i && rollup -c"
   },
   "author": "",
   "license": "MIT",
