--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dxf-writer": "^1.15.1",
     "express": "^4.18.1",
+    "simple-color-picker": "^1.0.5",
     "socket.io": "^4.5.1",
     "stats.js": "^0.17.0",
     "three": "^0.135.0",
