--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "dependencies": {
     "dxf-writer": "^1.15.1",
     "express": "^4.18.1",
-    "simple-color-picker": "^1.0.5",
     "socket.io": "^4.5.1",
     "stats.js": "^0.17.0",
     "three": "^0.135.0",
     "three-mesh-bvh": "^0.5.15",
+    "toolcool-color-picker": "^1.0.13",
     "web-ifc-three": "^0.0.118"
   }
 }
